# passwordManager

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
include/: backup_manager.h  cli_utils.h  crypt_utils.h  database.h  password_generator.h  secure_memory.h  types.h
src/: backup_manager.cpp  cli_utils.cpp  crypt_utils.cpp  database.cpp  main.cpp  password_generator.cpp  secure_memory.cpp
tests/: CMakeLists.txt
